<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:validate="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:key="openapssmb"
        android:title="@string/apscurves">

        <EditTextPreference
            android:defaultValue="1"
            android:dialogMessage="@string/openapsma_maxbasal_summary"
            android:key="@string/key_openapsma_max_basal"
            android:inputType="numberDecimal"
            android:title="@string/openapsma_maxbasal_title" />

        <EditTextPreference
            android:defaultValue="3"
            android:dialogMessage="@string/openapssmb_maxiob_summary"
            android:key="@string/key_openapssmb_max_iob"
            android:numeric="decimal"
            android:title="@string/openapssmb_maxiob_title" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="openapsama_useautosens"
            android:title="@string/openapsama_useautosens" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_use_smb"
            android:summary="@string/enablesmb_summary"
            android:title="@string/enablesmb" />

        <SwitchPreference
            android:defaultValue="false"
            android:dependency="@string/key_use_smb"
            android:key="@string/key_enableSMB_with_COB"
            android:summary="@string/enablesmbwithcob_summary"
            android:title="@string/enablesmbwithcob" />

        <SwitchPreference
            android:defaultValue="false"
            android:dependency="@string/key_use_smb"
            android:key="@string/key_enableSMB_with_temptarget"
            android:summary="@string/enablesmbwithtemptarget_summary"
            android:title="@string/enablesmbwithtemptarget" />

        <SwitchPreference
            android:defaultValue="false"
            android:dependency="@string/key_use_smb"
            android:key="@string/key_allowSMB_with_high_temptarget"
            android:summary="@string/enablesmbwithhightemptarget_summary"
            android:title="@string/enablesmbwithhightemptarget" />

        <SwitchPreference
            android:defaultValue="false"
            android:dependency="@string/key_use_smb"
            android:key="@string/key_enableSMB_always"
            android:summary="@string/enablesmbalways_summary"
            android:title="@string/enablesmbalways" />

        <SwitchPreference
            android:defaultValue="false"
            android:dependency="@string/key_use_smb"
            android:key="@string/key_enableSMB_after_carbs"
            android:summary="@string/enablesmbaftercarbs_summary"
            android:title="@string/enablesmbaftercarbs" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_use_uam"
            android:summary="@string/enableuam_summary"
            android:title="@string/enableuam" />

        <com.andreabaccega.widget.ValidatingEditTextPreference
            android:dependency="@string/key_use_smb"
            android:defaultValue="4"
            android:dialogMessage="@string/apscurves_smb_steps_summary"
            android:digits="0123456789"
            android:inputType="number"
            android:key="@string/key_apscurves_smb_steps"
            android:maxLines="20"
            android:selectAllOnFocus="true"
            android:title="@string/apscurves_smb_steps"
            validate:minNumber="1"
            validate:maxNumber="8"
            validate:testType="numericRange" />

        <com.andreabaccega.widget.ValidatingEditTextPreference
            android:dependency="@string/key_use_smb"
            android:defaultValue="30"
            android:dialogMessage="@string/apscurves_smb_min_basal_summary"
            android:digits="0123456789"
            android:inputType="number"
            android:key="@string/key_apscurves_smb_min_basal"
            android:maxLines="20"
            android:selectAllOnFocus="true"
            android:title="@string/apscurves_smb_min_basal"
            validate:minNumber="0"
            validate:maxNumber="200"
            validate:testType="numericRange" />

        <com.andreabaccega.widget.ValidatingEditTextPreference
            android:dependency="@string/key_use_smb"
            android:defaultValue="4"
            android:dialogMessage="@string/apscurves_smb_steps_summary_uam"
            android:digits="0123456789"
            android:inputType="number"
            android:key="@string/key_apscurves_smb_steps_uam"
            android:maxLines="20"
            android:selectAllOnFocus="true"
            android:title="@string/apscurves_smb_steps_uam"
            validate:minNumber="1"
            validate:maxNumber="8"
            validate:testType="numericRange" />

        <com.andreabaccega.widget.ValidatingEditTextPreference
            android:dependency="@string/key_use_smb"
            android:defaultValue="30"
            android:dialogMessage="@string/apscurves_smb_min_basal_summary_uam"
            android:digits="0123456789"
            android:inputType="number"
            android:key="@string/key_apscurves_smb_min_basal_uam"
            android:maxLines="20"
            android:selectAllOnFocus="true"
            android:title="@string/apscurves_smb_min_basal_uam"
            validate:minNumber="0"
            validate:maxNumber="200"
            validate:testType="numericRange" />

        <com.andreabaccega.widget.ValidatingEditTextPreference
            android:defaultValue="5"
            android:dialogMessage="@string/apscurves_resting_calories"
            android:digits="0123456789"
            android:inputType="number"
            android:key="@string/key_apscurves_resting_calories"
            android:maxLines="20"
            android:selectAllOnFocus="true"
            android:title="@string/apscurves_resting_calories"
            validate:minNumber="1"
            validate:maxNumber="10"
            validate:testType="numericRange" />

        <com.andreabaccega.widget.ValidatingEditTextPreference
            android:defaultValue="5"
            android:dialogMessage="@string/apscurves_carbs_to_calories"
            android:digits="0123456789"
            android:inputType="number"
            android:key="@string/key_apscurves_carbs_to_calories"
            android:maxLines="20"
            android:selectAllOnFocus="true"
            android:title="@string/apscurves_carbs_to_calories"
            validate:minNumber="1"
            validate:maxNumber="40"
            validate:testType="numericRange" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_smb_enable_carbs_suggestions"
            android:summary="@string/enablecarbssuggestions_summary"
            android:title="@string/enable_carbs_suggestions" />

        <com.andreabaccega.widget.ValidatingEditTextPreference
            android:defaultValue="0"
            android:dialogMessage="@string/enable_carbs_suggestions_threshold_summary"
            android:digits="0123456789"
            android:inputType="number"
            android:key="@string/key_smb_enable_carbs_suggestions_threshold"
            android:maxLines="20"
            android:selectAllOnFocus="true"
            android:title="@string/enable_carbs_suggestions_threshold"
            validate:maxNumber="20"
            validate:minNumber="0"
            validate:testType="numericRange" />

        <com.andreabaccega.widget.ValidatingEditTextPreference
            android:defaultValue="0"
            android:dialogMessage="@string/carbs_feedback_percentage"
            android:digits="0123456789"
            android:inputType="number"
            android:key="@string/key_carbs_feedback_percentage"
            android:maxLines="20"
            android:selectAllOnFocus="true"
            android:title="@string/carbs_feedback_percentage"
            validate:maxNumber="100"
            validate:minNumber="0"
            validate:testType="numericRange" />

        key_carbs_feedback_percentage

        <PreferenceScreen android:title="@string/advancedsettings_title">

            <Preference android:summary="@string/openapsama_link_to_preferncejson_doc_txt">
                <intent
                    android:action="android.intent.action.VIEW"
                    android:data="@string/openapsama_link_to_preferncejson_doc" />
            </Preference>

            <SwitchPreference
                android:defaultValue="false"
                android:key="@string/key_always_use_shortavg"
                android:summary="@string/always_use_shortavg_summary"
                android:title="@string/always_use_shortavg" />

            <com.andreabaccega.widget.ValidatingEditTextPreference
                android:defaultValue="3"
                android:dialogMessage="@string/openapsama_max_daily_safety_multiplier_summary"
                android:digits="0123456789.,"
                android:inputType="number"
                android:key="@string/key_openapsama_max_daily_safety_multiplier"
                android:maxLines="20"
                android:selectAllOnFocus="true"
                android:title="@string/openapsama_max_daily_safety_multiplier"
                validate:maxNumber="10"
                validate:minNumber="1"
                validate:testType="numericRange" />

            <com.andreabaccega.widget.ValidatingEditTextPreference
                android:defaultValue="4"
                android:dialogMessage="@string/openapsama_current_basal_safety_multiplier_summary"
                android:digits="0123456789.,"
                android:inputType="number"
                android:key="@string/key_openapsama_current_basal_safety_multiplier"
                android:maxLines="20"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:title="@string/openapsama_current_basal_safety_multiplier"
                validate:floatmaxNumber="10"
                validate:floatminNumber="1"
                validate:testType="floatNumericRange" />

        </PreferenceScreen>

    </PreferenceCategory>

</PreferenceScreen>